# QuickChat-rust

./: .gitignore  Cargo.toml
src/: adapter.rs  client.rs  client_handler.rs  find_server.rs  main.rs  message.rs  message_types.rs  server.rs  server_discovery_thread.rs
