[package]
name = "quick_chat"
version = "0.0.1"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
pnet_datalink = "0.31"
log = "0.4"
env_logger = "0.10"
lazy_static = "1.4"
serde_json = "1.0"
chrono = "0.4"

[dependencies.pnet]
version = "0.31"

[dependencies.serde]
version = "1.0"
features = ["derive"]
