[package]
name = "quick_chat"
version = "0.1.0"
edition = "2021"
authors = ["Andrew Santhosh <andrewsanthosh264@gmail.com>"]
license = "GPL-3.0"
description = "A simple chat application"
repository = "https://www.github.com/andrew264/QuickChat-rust/"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
log = "0.4"
env_logger = "0.10"
lazy_static = "1.4"
serde_json = "1.0"
chrono = "0.4"

[dependencies.serde]
version = "1.0"
features = ["derive"]
